[gd_scene load_steps=6 format=3 uid="uid://c5idu7a0lm5ak"]

[ext_resource type="Script" path="res://player.gd" id="1_170y2"]
[ext_resource type="Texture2D" uid="uid://p1p7cy0aw35n" path="res://art/player_walk1.png" id="2_7pvse"]
[ext_resource type="Texture2D" uid="uid://c2wv8nslcmtd" path="res://art/player_walk2.png" id="3_2c3mn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v0w3g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7pvse")
}, {
"duration": 1.0,
"texture": ExtResource("3_2c3mn")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i2ldf"]
radius = 31.0
height = 78.91

[node name="Player" type="Area2D" groups=["player"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_170y2")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.7475, 0.7475)
sprite_frames = SubResource("SpriteFrames_v0w3g")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.455)
shape = SubResource("CapsuleShape2D_i2ldf")

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2(67.72, -0.06)

[node name="GunTimer" type="Timer" parent="." groups=["bullet"]]
wait_time = 0.25

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GunTimer" to="." method="_on_gun_timer_timeout"]
